--- a/fe/index.html
+++ b/fe/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
     <title>air dnb</title>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4b95856ade459b685777cffc0a932b97"></script>
+    <script src="https://cdn.portone.io/v2/browser-sdk.js"></script>
   </head>
   <body>
     <div id="app"></div>
